httpd - http(s) reverse proxy for UAT

--- a/apache2/httpd.conf
+++ b/apache2/httpd.conf
@@ -115,7 +115,7 @@ LoadModule alias_module libexec/apache2/mod_alias.so
 LoadModule rewrite_module libexec/apache2/mod_rewrite.so
 #LoadModule perl_module libexec/apache2/mod_perl.so
 #LoadModule php5_module libexec/apache2/libphp5.so
-#LoadModule hfs_apple_module libexec/apache2/mod_hfs_apple.so
+LoadModule hfs_apple_module libexec/apache2/mod_hfs_apple.so
 
 <IfModule !mpm_netware_module>
 <IfModule !mpm_winnt_module>
@@ -278,6 +278,7 @@ LogLevel warn
     #
     LogFormat "%h %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" combined
     LogFormat "%h %l %u %t \"%r\" %>s %b" common
+    LogFormat "%v %h %l %u %t \"%r\" %>s %b" cvh
 
     <IfModule logio_module>
       # You need to enable mod_logio.c to use %I and %O
@@ -474,7 +475,7 @@ Include /private/etc/apache2/extra/httpd-userdir.conf
 #Include /private/etc/apache2/extra/httpd-info.conf
 
 # Virtual hosts
-#Include /private/etc/apache2/extra/httpd-vhosts.conf
+Include /private/etc/apache2/extra/httpd-vhosts.conf
 
 # Local access to the Apache HTTP Server Manual
 Include /private/etc/apache2/extra/httpd-manual.conf
@@ -483,10 +484,10 @@ Include /private/etc/apache2/extra/httpd-manual.conf
 #Include /private/etc/apache2/extra/httpd-dav.conf
 
 # Various default settings
-#Include /private/etc/apache2/extra/httpd-default.conf
+Include /private/etc/apache2/extra/httpd-default.conf
 
 # Secure (SSL/TLS) connections
-#Include /private/etc/apache2/extra/httpd-ssl.conf
+Include /private/etc/apache2/extra/httpd-ssl.conf
 #
 # Note: The following must must be present to support
 #       starting without SSL on platforms with no /dev/random equivalent
