--- a/apache2/extra/httpd-vhosts.conf
+++ b/apache2/extra/httpd-vhosts.conf
@@ -18,28 +18,82 @@
 #
 NameVirtualHost *:80
 
+<Proxy balancer://b2c>
+    # CNS-ETUAT-6 former emailenglishuat.englishtown.com
+    BalancerMember http://10.128.34.233:80
+</Proxy>
+
+<Proxy balancer://lls>
+    # CNS-ETUAT-12 former llsqa.englishtown.com
+    BalancerMember http://10.128.34.239:80
+</Proxy>
+
 #
 # VirtualHost example:
 # Almost any Apache directive may go into a VirtualHost container.
 # The first VirtualHost section is used for all requests that do not
 # match a ServerName or ServerAlias in any <VirtualHost> block.
 #
-<VirtualHost *:80>
-    ServerAdmin webmaster@dummy-host.example.com
-    DocumentRoot "/usr/docs/dummy-host.example.com"
-    ServerName dummy-host.example.com
-    ServerAlias www.dummy-host.example.com
-    ErrorLog "/private/var/log/apache2/dummy-host.example.com-error_log"
-    CustomLog "/private/var/log/apache2/dummy-host.example.com-access_log" common
-</VirtualHost>
 
 <VirtualHost *:80>
-    ServerAdmin webmaster@dummy-host2.example.com
-    DocumentRoot "/usr/docs/dummy-host2.example.com"
-    ServerName dummy-host2.example.com
-    ErrorLog "/private/var/log/apache2/dummy-host2.example.com-error_log"
-    CustomLog "/private/var/log/apache2/dummy-host2.example.com-access_log" common
+    ServerAdmin DLA_HAO_Developer@ef.com
+    DocumentRoot "/usr/docs/haouat.englishtown.com"
+
+    ServerName haouat.englishtown.com
+    ServerAlias haouatcn.englishtown.cn
+    ServerAlias haocache.englishtown.com
+    ServerAlias hao-ak1.englishtown.com
+    ServerAlias hao-ak2.englishtown.com
+    ServerAlias haosecure.englishtown.com
+    # how to handle wildcard domain
+#    ServerAlias *.englishtown.*
+
+    # B2B specific requests, forwarded to LLS UAT server.
+    ProxyPass /adfs                     balancer://lls/adfs
+    #ProxyPass /elab                     balancer://lls/elab
+    ProxyPass /enrollment               balancer://lls/enrollment
+    ProxyPass /lcp                      balancer://lls/lcp
+    ProxyPass /partnertool              balancer://lls/partnertool
+    ProxyPass /productioncenter         balancer://lls/productioncenter
+    ProxyPass /reportingcenter          balancer://lls/reportingcenter
+    ProxyPass /translator               balancer://lls/translator
+
+    # By default, go to Polaris UAT server.
+    ProxyPass /         balancer://b2c/
+    ProxyPassReverse /  balancer://b2c/
+    ProxyPassReverse /  balancer://lls/
+
+    # seems we don't need them
+#    ProxyPassReverseCookieDomain balancer://b2c haouat.englishtown.com
+#    ProxyPassReverseCookieDomain balancer://lls haouat.englishtown.com
+
+    ProxyPreserveHost on
+
+    ErrorLog "/private/var/log/apache2/haouat.englishtown.com-error_log"
+    CustomLog "/private/var/log/apache2/haouat.englishtown.com-access_log" cvh
 </VirtualHost>
 
+# WCF services HTTP binding
+<VirtualHost *:80>
+    ServerAdmin DLA_HAO_Developer@ef.com
+    DocumentRoot "/usr/docs/dev-services.englishtown.com"
 
+    ServerName dev-services.englishtown.com
+    ServerAlias local.englishtown.com
+    ServerAlias devcn-services.englishtown.com
 
+    # B2B specific requests, forwarded to LLS UAT server.
+    # ProxyPass /services/elab            balancer://lls/services/elab
+    ProxyPass /services/reportcenter    balancer://lls/services/reportcenter
+    ProxyPass /services/leveltest       balancer://lls/services/leveltest
+    ProxyPass /services/translator      balancer://lls/services/translator
+    # By default, go to Polaris UAT server.
+    ProxyPass /         balancer://b2c/
+    ProxyPassReverse /  balancer://b2c/
+    ProxyPassReverse /  balancer://lls/
+
+    ProxyPreserveHost on
+
+    ErrorLog "/private/var/log/apache2/dev-services.englishtown.com-error_log"
+    CustomLog "/private/var/log/apache2/dev-services.englishtown.com-access_log" cvh
+</VirtualHost>
