--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -116,3 +116,44 @@ http {
     #}
 
 }
+
+tcp {
+
+    access_log  /usr/local/var/log/nginx/tcp_access.log;
+
+    upstream b2c {
+        server  10.128.43.233:808;
+        check   interval=3000 rise=2 fall=5 timeout=1000;
+    }
+
+    upstream lls {
+        # CNS-ETUAT-12
+        server  10.128.43.239:808;
+        check   interval=3000 rise=2 fall=5 timeout=1000;
+    }
+
+    server {
+        
+        listen 808;
+
+        server_name *.englishtown.com;
+
+        proxy_pass lls;
+
+        # location /services/reportcenter {
+        #     proxy_pass lls/services/reportcenter;
+        # }
+        # location /services/leveltest {
+        #     proxy_pass lls/services/leveltest;
+        # }
+        # location /services/translator {
+        #     proxy_pass lls/services/translator;
+        # }
+        # # default 
+        # location / {
+        #     proxy_pass b2c;
+        # }
+
+    }
+
+}
