--- a/apache2.4/extra/httpd-vhosts.conf
+++ b/apache2.4/extra/httpd-vhosts.conf
@@ -14,28 +14,125 @@
 # You may use the command line option '-S' to verify your virtual host
 # configuration.
 
+
+<Proxy balancer://siteus>
+    BalancerMember http://127.0.0.1:80  retry=0
+</Proxy>
+
+<Proxy balancer://sitecn>
+    BalancerMember http://127.0.0.1:8080  retry=0
+</Proxy>
+
 #
 # VirtualHost example:
 # Almost any Apache directive may go into a VirtualHost container.
 # The first VirtualHost section is used for all requests that do not
 # match a ServerName or ServerAlias in any <VirtualHost> block.
 #
-<VirtualHost *:80>
-    ServerAdmin webmaster@dummy-host.example.com
-    DocumentRoot "c:/Apache/2.4/docs/dummy-host.example.com"
-    ServerName dummy-host.example.com
-    ServerAlias www.dummy-host.example.com
-    ErrorLog "logs/dummy-host.example.com-error.log"
-    CustomLog "logs/dummy-host.example.com-access.log" common
+
+# Bad Hosts
+<VirtualHost 10.128.43.114:80>
+
+    ServerAdmin dla_hao_developer@ef.com
+    DocumentRoot "E:/Apache_Sites"
+    ServerName invalid.englishtown.com
+
+    RewriteEngine on
+    RewriteRule ^/(.*)  /bad-hosts.html
+
+    <Directory "E:/Apache_Sites">
+        AllowOverride None
+        Options None
+        Require all granted
+    </Directory>
+
+    ErrorLog "E:/Apache_Sites/logs/invalid-error.log"
+    CustomLog "E:/Apache_Sites/logs/invalid-access.log" common
+
 </VirtualHost>
 
-<VirtualHost *:80>
-    ServerAdmin webmaster@dummy-host2.example.com
-    DocumentRoot "c:/Apache/2.4/docs/dummy-host2.example.com"
-    ServerName dummy-host2.example.com
-    ErrorLog "logs/dummy-host2.example.com-error.log"
-    CustomLog "logs/dummy-host2.example.com-access.log" common
+# Site US
+<VirtualHost 10.128.43.114:80>
+
+    ServerAdmin dla_hao_developer@ef.com
+    DocumentRoot "E:/Apache_Sites"
+
+    ServerName local.englishtown.com
+    ServerAlias dev.englishtown.com
+    ServerAlias dev-services.englishtown.com
+    ServerAlias dev-comet.englishtown.com
+    ServerAlias devus1.englishtown.com
+
+    Header merge X-Proxied-By "Apache2.4"
+    Header merge X-SiteName "US1"
+
+    ProxyPreserveHost on
+
+    # CQ5
+    ProxyPass /dam          http://juno2.englishtown.com/CQ5Proxy/content/dam
+    ProxyPass /             balancer://siteus/
+    ProxyPassReverse /      balancer://siteus/
+
+    <Directory "E:/Apache_Sites">
+        AllowOverride None
+        Options None
+        Require all granted
+    </Directory>
+
+    ErrorLog "E:/Apache_Sites/logs/siteus-error.log"
+    CustomLog "E:/Apache_Sites/logs/siteus-access.log" common
+
 </VirtualHost>
 
+# Site CN
+<VirtualHost 10.128.43.114:80>
 
+    ServerAdmin dla_hao_developer@ef.com
+    DocumentRoot "E:/Apache_Sites"
 
+    ServerName localcn.englishtown.com
+    ServerAlias devcn.englishtown.com
+    ServerAlias devcn-services.englishtown.com
+    ServerAlias devcn-comet.englishtown.com
+    # More domains below
+    ServerAlias corporate.englishtown.cn
+    ServerAlias corporatebeta.englishtown.cn
+
+    Header merge X-Proxied-By "Apache2.4"
+    Header merge X-SiteName "CN1"
+
+    ProxyPreserveHost on
+
+    # CQ5
+    ProxyPass /dam          http://juno2.englishtown.com/CQ5Proxy/content/dam
+    ProxyPass /             balancer://sitecn/
+    ProxyPassReverse /      balancer://sitecn/
+
+    <Directory "E:/Apache_Sites">
+        AllowOverride None
+        Options None
+        Require all granted
+    </Directory>
+
+    ErrorLog "E:/Apache_Sites/logs/sitecn-error.log"
+    CustomLog "E:/Apache_Sites/logs/sitecn-access.log" common
+
+</VirtualHost>
+
+# Apache itself.
+<VirtualHost 10.128.43.114:80>
+
+    ServerAdmin dla_hao_developer@ef.com
+    DocumentRoot "E:/Apache_Sites"
+    ServerName apache.englishtown.com
+
+    <Directory "E:/Apache_Sites">
+        AllowOverride None
+        Options None
+        Require all granted
+    </Directory>
+
+    ErrorLog "E:/Apache_Sites/logs/apache-error.log"
+    CustomLog "E:/Apache_Sites/logs/apache-access.log" common
+
+</VirtualHost>
