--- a/apache2.4/extra/httpd-info.conf
+++ b/apache2.4/extra/httpd-info.conf
@@ -13,7 +13,7 @@
 
 <Location /server-status>
     SetHandler server-status
-    Require host .example.com
+    Require host apache.englishtown.com
     Require ip 127
 </Location>
 
@@ -31,6 +31,6 @@
 #
 <Location /server-info>
     SetHandler server-info
-    Require host .example.com
+    Require host apache.englishtown.com
     Require ip 127
 </Location>
