--- a/apache2.4/httpd.conf
+++ b/apache2.4/httpd.conf
@@ -55,7 +55,7 @@ ServerRoot "c:/Apache/2.4"
 # prevent Apache from glomming onto all bound IP addresses.
 #
 #Listen 12.34.56.78:80
-Listen 80
+Listen 10.128.43.114:80
 
 #
 # Dynamic Shared Object (DSO) Support
@@ -113,16 +113,16 @@ LoadModule env_module modules/mod_env.so
 #LoadModule ext_filter_module modules/mod_ext_filter.so
 #LoadModule file_cache_module modules/mod_file_cache.so
 #LoadModule filter_module modules/mod_filter.so
-#LoadModule headers_module modules/mod_headers.so
+LoadModule headers_module modules/mod_headers.so
 #LoadModule heartbeat_module modules/mod_heartbeat.so
 #LoadModule heartmonitor_module modules/mod_heartmonitor.so
 #LoadModule ident_module modules/mod_ident.so
 #LoadModule imagemap_module modules/mod_imagemap.so
 LoadModule include_module modules/mod_include.so
-#LoadModule info_module modules/mod_info.so
+LoadModule info_module modules/mod_info.so
 LoadModule isapi_module modules/mod_isapi.so
 #LoadModule lbmethod_bybusyness_module modules/mod_lbmethod_bybusyness.so
-#LoadModule lbmethod_byrequests_module modules/mod_lbmethod_byrequests.so
+LoadModule lbmethod_byrequests_module modules/mod_lbmethod_byrequests.so
 #LoadModule lbmethod_bytraffic_module modules/mod_lbmethod_bytraffic.so
 #LoadModule lbmethod_heartbeat_module modules/mod_lbmethod_heartbeat.so
 #LoadModule ldap_module modules/mod_ldap.so
@@ -135,15 +135,15 @@ LoadModule log_config_module modules/mod_log_config.so
 LoadModule mime_module modules/mod_mime.so
 #LoadModule mime_magic_module modules/mod_mime_magic.so
 LoadModule negotiation_module modules/mod_negotiation.so
-#LoadModule proxy_module modules/mod_proxy.so
+LoadModule proxy_module modules/mod_proxy.so
 #LoadModule proxy_ajp_module modules/mod_proxy_ajp.so
-#LoadModule proxy_balancer_module modules/mod_proxy_balancer.so
+LoadModule proxy_balancer_module modules/mod_proxy_balancer.so
 #LoadModule proxy_connect_module modules/mod_proxy_connect.so
 #LoadModule proxy_express_module modules/mod_proxy_express.so
 #LoadModule proxy_fcgi_module modules/mod_proxy_fcgi.so
 #LoadModule proxy_ftp_module modules/mod_proxy_ftp.so
 #LoadModule proxy_html_module modules/mod_proxy_html.so
-#LoadModule proxy_http_module modules/mod_proxy_http.so
+LoadModule proxy_http_module modules/mod_proxy_http.so
 #LoadModule proxy_scgi_module modules/mod_proxy_scgi.so
 #LoadModule proxy_wstunnel_module modules/mod_proxy_wstunnel.so
 #LoadModule ratelimit_module modules/mod_ratelimit.so
@@ -151,7 +151,7 @@ LoadModule negotiation_module modules/mod_negotiation.so
 #LoadModule remoteip_module modules/mod_remoteip.so
 #LoadModule request_module modules/mod_request.so
 #LoadModule reqtimeout_module modules/mod_reqtimeout.so
-#LoadModule rewrite_module modules/mod_rewrite.so
+LoadModule rewrite_module modules/mod_rewrite.so
 #LoadModule sed_module modules/mod_sed.so
 #LoadModule session_module modules/mod_session.so
 #LoadModule session_cookie_module modules/mod_session_cookie.so
@@ -159,18 +159,18 @@ LoadModule negotiation_module modules/mod_negotiation.so
 #LoadModule session_dbd_module modules/mod_session_dbd.so
 LoadModule setenvif_module modules/mod_setenvif.so
 #LoadModule slotmem_plain_module modules/mod_slotmem_plain.so
-#LoadModule slotmem_shm_module modules/mod_slotmem_shm.so
+LoadModule slotmem_shm_module modules/mod_slotmem_shm.so
 #LoadModule socache_dbm_module modules/mod_socache_dbm.so
 #LoadModule socache_memcache_module modules/mod_socache_memcache.so
 #LoadModule socache_shmcb_module modules/mod_socache_shmcb.so
 #LoadModule speling_module modules/mod_speling.so
 #LoadModule ssl_module modules/mod_ssl.so
-#LoadModule status_module modules/mod_status.so
+LoadModule status_module modules/mod_status.so
 #LoadModule substitute_module modules/mod_substitute.so
 #LoadModule unique_id_module modules/mod_unique_id.so
 #LoadModule userdir_module modules/mod_userdir.so
 #LoadModule usertrack_module modules/mod_usertrack.so
-#LoadModule version_module modules/mod_version.so
+LoadModule version_module modules/mod_version.so
 #LoadModule vhost_alias_module modules/mod_vhost_alias.so
 #LoadModule watchdog_module modules/mod_watchdog.so
 #LoadModule xml2enc_module modules/mod_xml2enc.so
@@ -486,19 +486,19 @@ LogLevel warn
 #Include conf/extra/httpd-userdir.conf
 
 # Real-time info on requests and configuration
-#Include conf/extra/httpd-info.conf
+Include conf/extra/httpd-info.conf
 
 # Virtual hosts
-#Include conf/extra/httpd-vhosts.conf
+Include conf/extra/httpd-vhosts.conf
 
 # Local access to the Apache HTTP Server Manual
-#Include conf/extra/httpd-manual.conf
+Include conf/extra/httpd-manual.conf
 
 # Distributed authoring and versioning (WebDAV)
 #Include conf/extra/httpd-dav.conf
 
 # Various default settings
-#Include conf/extra/httpd-default.conf
+Include conf/extra/httpd-default.conf
 
 # Configure mod_proxy_html to understand HTML4/XHTML1
 <IfModule proxy_html_module>
@@ -527,4 +527,3 @@ SSLRandomSeed connect builtin
 #<IfModule headers_module>
 #RequestHeader unset DNT env=bad_DNT
 #</IfModule>
-
