apache 2.4 https & listen on loopback instead

--- a/apache2.4/extra/httpd-vhosts.conf
+++ b/apache2.4/extra/httpd-vhosts.conf
@@ -16,11 +16,11 @@
 
 
 <Proxy balancer://siteus>
-    BalancerMember http://127.0.0.1:80  retry=0
+    BalancerMember http://10.128.43.114:80  retry=0
 </Proxy>
 
 <Proxy balancer://sitecn>
-    BalancerMember http://127.0.0.1:8080  retry=0
+    BalancerMember http://10.128.43.114:8080  retry=0
 </Proxy>
 
 #
@@ -31,7 +31,7 @@
 #
 
 # Bad Hosts
-<VirtualHost 10.128.43.114:80>
+<VirtualHost 127.0.0.1:80>
 
     ServerAdmin dla_hao_developer@ef.com
     DocumentRoot "E:/Apache_Sites"
@@ -52,7 +52,7 @@
 </VirtualHost>
 
 # Site US
-<VirtualHost 10.128.43.114:80>
+<VirtualHost 127.0.0.1:80>
 
     ServerAdmin dla_hao_developer@ef.com
     DocumentRoot "E:/Apache_Sites"
@@ -63,8 +63,8 @@
     ServerAlias dev-comet.englishtown.com
     ServerAlias devus1.englishtown.com
 
-    Header merge X-Proxied-By "Apache2.4"
-    Header merge X-SiteName "US1"
+    Header merge X-Proxied-By   "Apache2.4"
+    Header merge X-VirtualHost  "siteus"
 
     ProxyPreserveHost on
 
@@ -85,7 +85,7 @@
 </VirtualHost>
 
 # Site CN
-<VirtualHost 10.128.43.114:80>
+<VirtualHost 127.0.0.1:80>
 
     ServerAdmin dla_hao_developer@ef.com
     DocumentRoot "E:/Apache_Sites"
@@ -98,8 +98,8 @@
     ServerAlias corporate.englishtown.cn
     ServerAlias corporatebeta.englishtown.cn
 
-    Header merge X-Proxied-By "Apache2.4"
-    Header merge X-SiteName "CN1"
+    Header merge X-Proxied-By   "Apache2.4"
+    Header merge X-VirtualHost  "sitecn"
 
     ProxyPreserveHost on
 
@@ -120,7 +120,7 @@
 </VirtualHost>
 
 # Apache itself.
-<VirtualHost 10.128.43.114:80>
+<VirtualHost 127.0.0.1:80>
 
     ServerAdmin dla_hao_developer@ef.com
     DocumentRoot "E:/Apache_Sites"
