rewrite for invalid host request

--- a/apache2.4/extra/httpd-ssl.conf
+++ b/apache2.4/extra/httpd-ssl.conf
@@ -111,7 +111,7 @@ SSLSessionCacheTimeout  300
 # <VirtualHost 127.0.0.1:443>
 
 #     ServerAdmin dla_hao_developer@ef.com
-#     DocumentRoot "E:/Apache_Sites"
+#     DocumentRoot "c:/Apache/2.4"
 #     ServerName invalid.englishtown.com
 
 # 	#   SSL Engine Switch:
@@ -123,14 +123,14 @@ SSLSessionCacheTimeout  300
 #     RewriteEngine on
 #     RewriteRule ^/(.*)  /bad-hosts.html
 
-#     <Directory "E:/Apache_Sites">
+#     <Directory "c:/Apache/2.4">
 #         AllowOverride None
 #         Options None
 #         Require all granted
 #     </Directory>
 
-#     ErrorLog "E:/Apache_Sites/logs/invalid-error-https.log"
-#     CustomLog "E:/Apache_Sites/logs/invalid-access-https.log" common
+#     ErrorLog "c:/Apache/2.4/logs/invalid-error-https.log"
+#     CustomLog "c:/Apache/2.4/logs/invalid-access-https.log" common
 
 # </VirtualHost>
 
@@ -138,7 +138,6 @@ SSLSessionCacheTimeout  300
 <VirtualHost 127.0.0.1:443>
 
 #   General setup for the virtual host
-DocumentRoot "c:/Apache/2.4/htdocs"
 ServerName	local.englishtown.com:443
 ServerAlias localsecure.englishtown.com:443
 ServerAlias dev.englishtown.com:443
@@ -146,8 +145,8 @@ ServerAlias dev-services.englishtown.com:443
 ServerAlias uatdeepblue2.englishtown.com:443
 
 ServerAdmin admin@example.com
-ErrorLog	"E:/Apache_Sites/logs/siteus-error-https.log"
-TransferLog "E:/Apache_Sites/logs/siteus-access-https.log"
+ErrorLog	"c:/Apache/2.4/logs/siteus-error.log"
+TransferLog "c:/Apache/2.4/logs/siteus-access.log"
 
 #   SSL Engine Switch:
 #   Enable/Disable SSL for this virtual host.
@@ -319,22 +318,21 @@ BrowserMatch "MSIE [2-5]" \
 CustomLog "c:/Apache/2.4/logs/ssl_request.log" \
           "%t %h %{SSL_PROTOCOL}x %{SSL_CIPHER}x \"%r\" %b"
 
-</VirtualHost>                                  
+</VirtualHost>
 
 
 # Site CN - Https
 <VirtualHost 127.0.0.1:443>
 
 #   General setup for the virtual host
-DocumentRoot "c:/Apache/2.4/htdocs"
 ServerName	localcn.englishtown.com:443
 ServerAlias localsecurecn.englishtown.com:443
 ServerAlias devcn.englishtown.com:443
 ServerAlias devcn-services.englishtown.com:443
 
 ServerAdmin admin@example.com
-ErrorLog	"E:/Apache_Sites/logs/sitecn-error-https.log"
-TransferLog "E:/Apache_Sites/logs/sitecn-access-https.log"
+ErrorLog	"c:/Apache/2.4/logs/sitecn-error.log"
+TransferLog "c:/Apache/2.4/logs/sitecn-access.log"
 
 #   SSL Engine Switch:
 #   Enable/Disable SSL for this virtual host.
