--- a/apache2.4/extra/httpd-vhosts.conf
+++ b/apache2.4/extra/httpd-vhosts.conf
@@ -34,20 +34,24 @@
 <VirtualHost 127.0.0.1:80>
 
     ServerAdmin dla_hao_developer@ef.com
-    DocumentRoot "E:/Apache_Sites"
     ServerName invalid.englishtown.com
 
     RewriteEngine on
-    RewriteRule ^/(.*)  /bad-hosts.html
 
-    <Directory "E:/Apache_Sites">
+    # Return 406 (Not Acceptable) for invalid requests with referer.
+    RewriteCond %{HTTP_REFERER} ^(.+)$
+    RewriteRule ^/(.*)  -   [R=406,L]
+
+    RewriteRule ^/(.*)  /bad-hosts.html    [L]
+
+    <Directory "c:/Apache/2.4">
         AllowOverride None
         Options None
         Require all granted
     </Directory>
 
-    ErrorLog "E:/Apache_Sites/logs/invalid-error.log"
-    CustomLog "E:/Apache_Sites/logs/invalid-access.log" common
+    ErrorLog "c:/Apache/2.4/logs/invalid-error.log"
+    CustomLog "c:/Apache/2.4/logs/invalid-access.log" common
 
 </VirtualHost>
 
@@ -55,12 +59,13 @@
 <VirtualHost 127.0.0.1:80>
 
     ServerAdmin dla_hao_developer@ef.com
-    DocumentRoot "E:/Apache_Sites"
-
     ServerName local.englishtown.com
     ServerAlias dev.englishtown.com
     ServerAlias dev-services.englishtown.com
     ServerAlias dev-comet.englishtown.com
+    # More domains below
+    ServerAlias cache-ak1.englishtown.com
+    ServerAlias cache-ak2.englishtown.com
     ServerAlias devus1.englishtown.com
 
     Header merge X-Proxied-By   "Apache2.4"
@@ -73,14 +78,14 @@
     ProxyPass /             balancer://siteus/
     ProxyPassReverse /      balancer://siteus/
 
-    <Directory "E:/Apache_Sites">
+    <Directory "c:/Apache/2.4">
         AllowOverride None
         Options None
         Require all granted
     </Directory>
 
-    ErrorLog "E:/Apache_Sites/logs/siteus-error.log"
-    CustomLog "E:/Apache_Sites/logs/siteus-access.log" common
+    ErrorLog "c:/Apache/2.4/logs/siteus-error.log"
+    CustomLog "c:/Apache/2.4/logs/siteus-access.log" common
 
 </VirtualHost>
 
@@ -88,8 +93,6 @@
 <VirtualHost 127.0.0.1:80>
 
     ServerAdmin dla_hao_developer@ef.com
-    DocumentRoot "E:/Apache_Sites"
-
     ServerName localcn.englishtown.com
     ServerAlias devcn.englishtown.com
     ServerAlias devcn-services.englishtown.com
@@ -108,14 +111,14 @@
     ProxyPass /             balancer://sitecn/
     ProxyPassReverse /      balancer://sitecn/
 
-    <Directory "E:/Apache_Sites">
+    <Directory "c:/Apache/2.4">
         AllowOverride None
         Options None
         Require all granted
     </Directory>
 
-    ErrorLog "E:/Apache_Sites/logs/sitecn-error.log"
-    CustomLog "E:/Apache_Sites/logs/sitecn-access.log" common
+    ErrorLog "c:/Apache/2.4/logs/sitecn-error.log"
+    CustomLog "c:/Apache/2.4/logs/sitecn-access.log" common
 
 </VirtualHost>
 
@@ -123,16 +126,15 @@
 <VirtualHost 127.0.0.1:80>
 
     ServerAdmin dla_hao_developer@ef.com
-    DocumentRoot "E:/Apache_Sites"
     ServerName apache.englishtown.com
 
-    <Directory "E:/Apache_Sites">
+    <Directory "c:/Apache/2.4">
         AllowOverride None
         Options None
         Require all granted
     </Directory>
 
-    ErrorLog "E:/Apache_Sites/logs/apache-error.log"
-    CustomLog "E:/Apache_Sites/logs/apache-access.log" common
+    ErrorLog "c:/Apache/2.4/logs/error.log"
+    CustomLog "c:/Apache/2.4/logs/access.log" common
 
 </VirtualHost>
